# space-automation

./: .env  .env.example  .gitignore  .prettierrc  README.md
CloudSegmentationService/: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
CloudSegmentationService/src/api/: main.py  schemas.py
CloudSegmentationService/src/service/: image_segmentation.py
CloudSegmentationService/src/unet_config/: models.py
CorrectionService/: Dockerfile  docker-compose.yaml  go.mod  go.sum  main.go
Frontend/: .env  Dockerfile  docker-compose.yaml  package.json  pnpm-lock.yaml  tsconfig.app.json
Frontend/scripts/: generate-env.sh
Frontend/server/: .env  package-lock.json  package.json  server.js
Frontend/src/: App.module.css  App.tsx  index.css
Frontend/src/shared/: index.ts
Frontend/src/shared/api/: getAndMaybeHandleFunctionalError.ts  getAndMaybeHandleServerError.ts  makeRequest.ts  mockedFetch.ts  types.ts
Frontend/src/shared/lib/: getCorrectionServiceUrl.ts  getMainServiceUrl.ts  isDevelopment.ts  isProduction.ts  logger.ts  wait.ts
src/: App.tsx
