[project]
name = "fastapiproject"
version = "0.1.0"
description = ""
authors = [
    {name = "Мамашакиров Нуртилек Жанабидинович",email = "nzmamashakirov@edu.hse.ru"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch (>=2.6.0,<3.0.0)",
    "torchvision (>=0.21.0,<0.22.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
